--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -14,7 +14,10 @@
       <div class="row content-area m-0">
         
         <div class="col-4 d-flex flex-column border-end bg-white border rounded p-3" id=>
-            <p>REFERENSER</p>
+            <h2 style="text-align: center;">REFERENSER</h2>
+            <br>
+            <p style="color:gray; text-align: center;">Klicka på referensnummret för att derigeras till en PDF med aktuell riktlinje från Västra Götalandsregionen.</p>
+            <br><br>
             <div id="references"></div>
         </div>
   
@@ -23,13 +26,13 @@
             <div class="chat">
                 <div class ="message incoming">
                     <p>
-                        Välkommen till Digital Doktor. Skriv prompts här.
+                        Välkommen till Digital Doktor. 
+                        <br><br>Jag ska försöka svara på dina medecinska frågor baserat på VGR riktlinjerna.
+                        <br><br> VIKTIGT! Tänk på att jag kan svara fel, dubbelkolla alltid svaren!. Referenserna visar alla riktlinjer som svaret baserats på.
                     </p>
                 </div>
-
             </div>
-
-            </div>
+        </div>
   
             <form method="post" id="promptForm">
                 <div class="form-group">
@@ -42,6 +45,7 @@
                             <button class="btn btn-primary" type="submit">Skicka</button>
                         </div>
                     </div>
+                    <p>VIKTIGT! Tänk på att jag kan svara fel, dubbelkolla alltid svaren!</p>
                 </div>
            </form>
         </div>
@@ -129,7 +133,7 @@
     //Find the refernce pattern, and create link around the [i], the rest is not lin (just put the vales of 2 and 3 in the link if you want all)
     const linkedText = rawText.replace(
         /(\[\d+\])([^\n]*\nURL: )([^\n]+)/g,
-        '<a href="$3" target="_blank" style="color: inherit; text-decoration: none;">$1</a>$2$3'
+        '<a href="$3" target="_blank" style="color: inherit; text-decoration: none;">$1</a>$2<br>$3'
     );
     //Update the div to contain links and not just plain text from the responce
     refDiv.innerHTML = linkedText;
