--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -11,9 +11,9 @@
 
 <body class="bg-light">
 
-      <div class="row content-area m-0">
+      <div class="row content-area m-0  min-vh-100">
         
-        <div class="col-4 d-flex flex-column border-end bg-white border rounded p-3" id=>
+        <div class="col-12 col-md-4 d-flex flex-column border-end bg-white border rounded p-3" id=>
             <h2 style="text-align: center;">REFERENSER</h2>
             <br>
             <p style="color:gray; text-align: center;">Klicka på referensnummret för att derigeras till en PDF med aktuell riktlinje från Västra Götalandsregionen.</p>
@@ -21,7 +21,7 @@
             <div id="references"></div>
         </div>
   
-       <div class="col-8 d-flex flex-column bg-secondary text-white p-3">
+       <div class="col-12 col-md-8 d-flex flex-column bg-secondary text-white p-3">
           <div class="flex-grow-1 panel-scroll overflow-auto" id="chatScroll">
             <div class="chat">
                 <div class ="message incoming">
