[test][fronted] change width of homepage se if it makes a dif. on mobile devices

--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -9,7 +9,7 @@
     
 </head>
 
-<body class="bg-light">
+<body class="bg-light width=device-width">
 
       <div class="row content-area m-0  min-vh-100">
         
