--- a/myapp/static/css/home.css
+++ b/myapp/static/css/home.css
@@ -5,7 +5,7 @@
 }
 
 .col-8{
-    height: 900px; /*borde vara 100% men vet ej hur det ska uppnås på ett bra sätt*/
+    height: 100%
 
 }.row {
     height: 100%;
@@ -13,14 +13,14 @@
 }
 .chat .message p{
     background: lightskyblue;
-    padding: 12px 16px;
-    border-radius: 10px 10px 0 10px;
+    padding: 10% 10%;
+    border-radius: 5% 5% 0 5%;
     color: black;
 }
 
 .chat .incoming p{
     background-color: aliceblue;
-    border-radius: 10px 10px 10px 0;
+    border-radius: 5% 5% 5% 0;
 }
 .chat .outgoing {
     text-align: right;
