--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -18,9 +18,10 @@
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="/">Home</a>
+            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/test">TestChat</a>
+            <a class="nav-link" href="/generate_text">old_version</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
